--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
         "@testing-library/jest-dom": "^5.11.10",
         "@testing-library/react": "^11.2.5",
         "@testing-library/user-event": "^12.8.3",
+        "@turf/turf": "^6.3.0",
+        "axios": "^0.21.1",
+        "dayjs": "^1.10.4",
+        "gpxparser": "^3.0.7",
         "graphql": "^15.5.0",
+        "mapbox-gl": "^2.2.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.3",
