--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@testing-library/react": "^11.2.5",
         "@testing-library/user-event": "^12.8.3",
         "@turf/turf": "^6.3.0",
+        "@watergis/mapbox-gl-legend": "^1.1.4",
         "axios": "^0.21.1",
         "dayjs": "^1.10.4",
         "gpxparser": "^3.0.7",
