--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "slugify": "^1.5.0",
-        "web-vitals": "^1.1.1"
+        "web-vitals": "^1.1.1",
+        "worker-loader": "^3.0.8"
     },
     "scripts": {
         "start": "craco start",
